test/compile_errors/err_manual_extern_call_requires_unsafe.w
//! expect-error: manual extern function call requires unsafe context

extern "C" fn atoi(s: *const u8) -> i32

fn main:
    let x = atoi(c"42".ptr)
